kubernetes/pod-mongo.yml
############################################################
# Pod et Service permettant d'initialiser une base Mongo
############################################################
---
apiVersion: v1
kind: Pod
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  containers:
  - name: mongo
    image: mongo:latest
    ports:
    - containerPort: 27017
      hostPort: 27017
---
# Create backend service
kind: Service
apiVersion: v1
metadata:
  name: mongo
spec:
  type: NodePort
  selector:
    app: mongo
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
