kubernetes/srv-express-mongo.yml
kind: Service
apiVersion: v1
metadata:
  name: express-mongo
spec:
  type: NodePort
  selector:
    app: express-mongo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
