kubernetes/pod-traefik-ui.yml
############################################################
# Permet d'inialiser le pod traefik-ui afin de pouvoir accéder
# à l'interface graphique
############################################################
---
apiVersion: v1
kind: Pod
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
    k8s-app: traefik-ingress-lb
spec:
  hostNetwork: true
  containers:
  - name: traefik
    image: traefik
    ports:
    - name: http
      containerPort: 80
    - name: admin
      containerPort: 8080
    args:
    - --web
    - --web.address=:8080
    - --kubernetes
    - --logLevel=DEBUG
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik-ui.minikube
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: web
